# ikea_crawler

./: .gitignore  Dockerfile  Makefile  entry.sh  main.py  pyproject.toml
configs/: __init__.py  projects.yaml  settings.yaml
elements/: product.py  sidebar.py
helpers/: bot_helper.py  driver_helper.py  logging_helper.py  telegram_helper.py
